# ChangeLog for app-office/taxbird
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/taxbird/ChangeLog,v 1.25 2010/07/10 15:18:12 fauli Exp $

  10 Jul 2010; Christian Faulhammer <fauli@gentoo.org> taxbird-0.15.ebuild:
  stable x86, bug 319827

  17 Jun 2010; Christoph Mende <angelos@gentoo.org> taxbird-0.15.ebuild:
  Stable on amd64 wrt bug #319827

  24 May 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove wrobel from metadata.xml (#111816)

*taxbird-0.15 (04 Feb 2010)

  04 Feb 2010; Hanno Boeck <hanno@gentoo.org> +taxbird-0.15.ebuild:
  Version bump, openssl dependency was wrong and discouraged flag in guile
  is unneeded as it's implied by deprecated-flag.

*taxbird-0.14 (18 Oct 2009)

  18 Oct 2009; Hanno Boeck <hanno@gentoo.org> +taxbird-0.14.ebuild:
  Version bump.

*taxbird-0.13-r1 (16 Oct 2009)

  16 Oct 2009; Hanno Boeck <hanno@gentoo.org> +taxbird-0.13-r1.ebuild:
  Fix for executable stacks didn't work, also change removal of unneeded
  mime files to something more generic.

*taxbird-0.13 (12 Oct 2009)

  12 Oct 2009; Hanno Boeck <hanno@gentoo.org> +taxbird-0.13.ebuild:
  Version bump, switch to EAPI 2.

  12 Oct 2009; Hanno Boeck <hanno@gentoo.org>
  -files/taxbird-0.11-asneeded.patch:
  Remove old patch.

  28 Aug 2009; Petteri Räty <betelgeuse@gentoo.org> -taxbird-0.10.ebuild,
  -taxbird-0.11.ebuild:
  Remove old versions.

*taxbird-0.12 (22 Jan 2009)

  22 Jan 2009; Hanno Boeck <hanno@gentoo.org> taxbird-0.10.ebuild,
  +taxbird-0.12.ebuild:
  Version bump.

  14 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/taxbird-0.11-asneeded.patch, taxbird-0.10.ebuild,
  taxbird-0.11.ebuild:
  Remove --as-needed filtering, add a patch for it in 0.11.

*taxbird-0.11 (23 Jan 2008)

  23 Jan 2008; <wrobel@gentoo.org> -taxbird-0.11_rc.ebuild,
  +taxbird-0.11.ebuild:
  I was too quick. taxbird-11 got released today. Added 0.11, removed 0.11_rc.

*taxbird-0.11_rc (23 Jan 2008)
