@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST taxbird-0.15.tar.gz 410501 RMD160 bf0c5037ae5595c659d81e96e90de95f6f11d889 SHA1 90e33c06abaf6dd1e32aa1aa29372c073e26aa0b SHA256 0a573fd5400acdeb1b3f580bf4be010bd684dd1e46f307506350df5f776e0bbb
+DIST taxbird-0.16.tar.gz 419770 RMD160 0e598a491a2cf491ef19f975b7faea1a945a9648 SHA1 9fc9aa6baf1e415beda58a50dcc6ba818bb2d6db SHA256 afb582a37d1879ebdbbb6ae40fdea7092386dac840a38c191be3a799f2742f82
 EBUILD taxbird-0.15.ebuild 1036 RMD160 5f665269c3eba9a39bca117d1c24762ec92f068a SHA1 75cda59fae2acbe04da9892b3299f42b92d45180 SHA256 01265ee23fec75916fb8082512657378ad995de6ca94b6a605cd9fac25d9074f
-MISC ChangeLog 3362 RMD160 26a93077a83e0b1e3ad45f70fa00e3b89c46d71a SHA1 978785fb709121b525640a7c14a70ecf98c8ae64 SHA256 fb958418f2561462ff446c236104bb0b0daf75bf9e368960ee94225eff106329
+EBUILD taxbird-0.16.ebuild 1058 RMD160 b70637791a56d72e7d8f61dd3aa856efb5e747f5 SHA1 302f3f24194b19153bca71625ff18d93a87edefd SHA256 aaa7af990dd6b5cd42a6e928c70d2b037f42a2a9555cca924451cc7829f7bff6
+MISC ChangeLog 3476 RMD160 eabe843b829d99f977eb647b1723c77b1165f9c8 SHA1 5b57b9e513992d87d7f70c4e8de516331b533461 SHA256 5cc548ec52b066d067d2874ffe2d8871b5172a51315f33ad1a5803e749b9ec47
 MISC metadata.xml 233 RMD160 d81ec1a0582856aeac5ef3bfec5c80d9850216f6 SHA1 9b94f113e7f382076b1749c2a856e409c96cade3 SHA256 dce03f6cdd96135caf3c971a5ca4a8c916f44532fe8cfb6df88b7bdade407e8b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1HOFsACgkQr2QksT29OyDZmQCcC/qCpHXQ0bj5clRRIPcrP7oT
-/NoAni4tonxrfAvlM+PrRgODTQYaLZDN
-=PHCu
+iEYEARECAAYFAk1HOM0ACgkQr2QksT29OyCG+wCgnUB6la3Zzx3MnZ0bYMp2dKk9
+Th0AnAiwI2/0tC+l/urm/TRowUxD3mjY
+=Fuv9
 -----END PGP SIGNATURE-----
